--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.0.0",
+  "version": "5.0.1",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -1706,7 +1706,7 @@
           "nl": "De prijs !{{is|is niet}} één van de hoogste van vandaag"
         },
         "titleFormatted": {
-          "en": "The price !{{is|isn't}} one of [[number]] lowest of today",
+          "en": "The price !{{is|isn't}} one of [[number]] highest of today",
           "no": "Prisen !{{er|er ikke}} en av [[number]] de høyest i dag",
           "de": "Preis !{{ist|ist nicht}} einer der [[number]] höchsten heute",
           "sv": "Priset !{{är|är inte}} en av de [[number]] högsta idag",
@@ -4291,7 +4291,7 @@
               "hint": {
                 "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff."
               },
-              "value": 0,
+              "value": 1,
               "min": 0,
               "max": 10,
               "step": 1
@@ -4996,7 +4996,7 @@
               "hint": {
                 "en": "Group number when setting a new tariff via flow or DAP. Set at 0 to exclude updating the tariff."
               },
-              "value": 0,
+              "value": 1,
               "min": 0,
               "max": 10,
               "step": 1
@@ -5674,7 +5674,7 @@
               "hint": {
                 "en": "Group number when setting a new tariff via flow. Set at 0 to exclude updating the tariff."
               },
-              "value": 0,
+              "value": 1,
               "min": 0,
               "max": 10,
               "step": 1
