--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -3678,7 +3678,7 @@
             "next": "add_devices"
           },
           "options": {
-            "singular": false
+            "singular": true
           }
         },
         {
@@ -3797,6 +3797,22 @@
               "value": 0,
               "min": 0,
               "max": 5,
+              "step": 1
+            },
+            {
+              "id": "wait_for_update",
+              "type": "number",
+              "label": {
+                "en": "Delay hourly poll (minutes)",
+                "nl": "Vertraag uurlijkse poll (minuten)"
+              },
+              "hint": {
+                "en": "Set to 0 to get immediate updates on the hour. This setting is ignored for Watt and virtual source devices.",
+                "nl": "Zet op 0 voor directe poll op het hele uur. Deze instelling wordt niet gebruikt voor Watt en virtuele bron apparaten."
+              },
+              "value": 5,
+              "min": 0,
+              "max": 15,
               "step": 1
             }
           ]
@@ -4423,7 +4439,7 @@
             "next": "add_devices"
           },
           "options": {
-            "singular": false
+            "singular": true
           }
         },
         {
@@ -4565,6 +4581,22 @@
               "value": 0,
               "min": 0,
               "max": 5,
+              "step": 1
+            },
+            {
+              "id": "wait_for_update",
+              "type": "number",
+              "label": {
+                "en": "Delay hourly poll (minutes)",
+                "nl": "Vertraag uurlijkse poll (minuten)"
+              },
+              "hint": {
+                "en": "Set to 0 to get immediate updates on the hour. This setting is ignored for Watt and virtual source devices.",
+                "nl": "Zet op 0 voor directe poll op het hele uur. Deze instelling wordt niet gebruikt voor Watt en virtuele bron apparaten."
+              },
+              "value": 5,
+              "min": 0,
+              "max": 15,
               "step": 1
             }
           ]
@@ -5191,7 +5223,7 @@
             "next": "add_devices"
           },
           "options": {
-            "singular": false
+            "singular": true
           }
         },
         {
